# mudacao-escala

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
apps/api/: README.md  pyproject.toml
apps/api/scripts/: analise_tf_1t26.py  analise_tf_cafes_1t26.py  gerar_apresentacao_cafes.py  test_pdf.py
apps/api/src/escala_freemium_api/: __init__.py  auth_dep.py  clt_extras.py  clt_scheduler.py  clt_validator_pdf.py  config.py  csv_batch.py  db.py  email_sender.py  excel_export.py  horarios.py  main.py  pdf.py  rate_limit.py  routes.py  schemas.py  simulation_adapter.py  stripe_service.py
apps/api/tests/: conftest.py  test_clt_overnight.py  test_simulate.py
apps/web/: .env.local.example  middleware.ts  next.config.js  package.json  tailwind.config.ts
apps/web/app/: globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/components/: AvaliarRedeForm.tsx  FAQ.tsx  Footer.tsx  Header.tsx  HistoricoList.tsx  HorariosFields.tsx  JsonLd.tsx  LoginForm.tsx  LogoutButton.tsx  ManageSubscriptionButton.tsx  PlanCard.tsx  PremissasForm.tsx  ProfileForm.tsx  ResultadoView.tsx  SimulatorForm.tsx  SubscribeButton.tsx  ValidadorCLTForm.tsx  WaitlistForm.tsx
apps/web/lib/: api.ts  schemas.ts  utils.ts
deploy/: Caddyfile.snippet  README.md
deploy/scripts/: first-deploy.sh  setup.sh  update.sh
deploy/supabase-auth-templates/: README.md  confirmation.html  email-change.html  invite.html  magic-link.html  recovery.html
deploy/systemd/: escala-freemium-api.service  escala-freemium-web.service
(+20 files in other folders)
