[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "escala-freemium-api"
version = "0.1.0"
description = "API wrapper do engine de escala — versão freemium MudAção"
authors = [
    { name = "Felipe Feldens", email = "felipe@feldens.com" }
]
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic[email]>=2.6,<3",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "python-dotenv>=1.0",
    "httpx>=0.27",            # chamadas pra Resend
    "weasyprint>=61.0",       # PDF do resultado
    "jinja2>=3.1",            # template do PDF
    "stripe>=8.0,<11",        # Stripe SDK
    "PyJWT>=2.8,<3",          # valida JWT do Supabase
    # Engine local (resolvido via uv workspace)
    "escala-engine",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
    "mypy>=1.8",
]

[tool.uv.sources]
escala-engine = { path = "../../packages/engine", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/escala_freemium_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]
